--- a/site project/index.html
+++ b/site project/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/footer.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,20 +20,56 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap"
       rel="stylesheet"
     />
+    <title>SITE</title>
   </head>
   <body>
-    <main class="main">
-      <header>
+    <main>
+      <header class="header">
         <div class="header__container">
-          <div class="header__group">
-            <img src="/img/group.svg" alt="" />
+          <div class="group">
+            <a href=""> <img src="/images/group.svg" alt="" /> </a>
           </div>
 
-          <div class="header__navmenu">
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+          <div class="header__left">
+            <a href="">NEW</a>
+            <a href="">КАТАЛОГ</a>
+            <a href="">О НАС</a>
+          </div>
+
+          <div class="header__logo">
+            <img src="/images/YANKI.svg" alt="" />
+          </div>
+
+          <div class="header__right">
+            <div class="header__navmenu">
+              <a href=""
+                >RU
+                <img src="/images/Frame.svg" alt="" />
+              </a>
+
+              <a href=""
+                >UAH
+                <img src="/images/Frame.svg" alt="" />
+              </a>
+
+              <div class="header__images">
+                <div class="img1">
+                  <a href=""> <img src="/images/search.svg" alt="" /> </a>
+                </div>
+
+                <div class="img2">
+                  <a href=""> <img src="/images/profile.svg" alt="" /> </a>
+                </div>
+
+                <div class="img3">
+                  <a href=""> <img src="/images/favorite.svg" alt="" /> </a>
+                </div>
+
+                <div class="img4">
+                  <a href=""> <img src="/images/cart.svg" alt="" /> </a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </header>
