--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
   <body>
     <main>
       <header class="header">
-
-        <!-- <nav class="navbar navbar-expand-lg bg-dark">
-          <div class="container-fluid ">
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
             <a class="navbar-brand" href="#">
               <img src="/images/group.svg" alt=""
             /></a>
@@ -44,33 +43,45 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a
+                    class="nav-link active text-light"
+                    aria-current="page"
+                    href="#"
                     >NEW</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">КАТАЛОГ</a>
+                  <a class="nav-link active text-light" href="#">КАТАЛОГ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">О НАС</a>
+                  <a class="nav-link active text-light" href="#">О НАС</a>
                 </li>
+              </ul>
+
+              <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                   <a class="nav-link active" href="#">
                     <img src="/images/YANKI.svg" alt=""
                   /></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="#"
+              </ul>
+
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item text-light">
+                  <a class="nav-link active text-light" href="#"
                     >RU <img src="/images/Frame.svg" alt=""
                   /></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="#"
+                <li class="nav-item text-light">
+                  <a class="nav-link active text-light" href="#"
                     >UAH <img src="/images/Frame.svg" alt=""
                   /></a>
                 </li>
+              </ul>
+
+              <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                   <a class="nav-link active" href="#">
                     <img src="/images/search.svg" alt=""
@@ -94,55 +105,13 @@
               </ul>
             </div>
           </div>
-        </nav> -->
+        </nav>
 
-        <!-- <div class="header__container">
-          <div class="group">
-            <a href=""> <img src="/images/group.svg" alt="" /> </a>
-          </div>
-
-          <div class="header__left">
-            <a href="">NEW</a>
-            <a href="">КАТАЛОГ</a>
-            <a href="">О НАС</a>
-          </div>
-
-          <div class="header__logo">
-            <img src="/images/YANKI.svg" alt="" />
-          </div>
-
-          <div class="header__right">
-            <div class="header__navmenu">
-              <a href=""
-                >RU
-                <img src="/images/Frame.svg" alt="" />
-              </a>
-
-              <a href=""
-                >UAH
-                <img src="/images/Frame.svg" alt="" />
-              </a>
-
-              <div class="header__images">
-                <div class="img1">
-                  <a href=""> <img src="/images/search.svg" alt="" /> </a>
-                </div>
-
-                <div class="img2">
-                  <a href=""> <img src="/images/profile.svg" alt="" /> </a>
-                </div>
-
-                <div class="img3">
-                  <a href=""> <img src="/images/favorite.svg" alt="" /> </a>
-                </div>
-
-                <div class="img4">
-                  <a href=""> <img src="/images/cart.svg" alt="" /> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
+        <div class="text">Новая коллекция</div>
+        <div class="line"></div>
+        <div class="text2">
+          СМОТРЕТЬ НОВИНКИ <img src="/images/Vector.svg" alt="" />
+        </div>
       </header>
     </main>
   </body>
