--- a/index.html
+++ b/index.html
@@ -113,6 +113,41 @@
           СМОТРЕТЬ НОВИНКИ <img src="/images/Vector.svg" alt="" />
         </div>
       </header>
+
+      <div class="container">
+        <div class="categories">Категории</div>
+          <div class="container__grid">
+            <div><img src="/images/photo 1.svg" alt="">
+              <div class="block1">
+                <div class="grid__text1">Шубы</div>
+              </div>
+            </div>
+            <div><img src="/images/photo 2.svg" alt="">
+              <div class="block1">
+                <div class="grid__text2">Парки</div>
+              </div>
+            </div>
+            <div><img src="/images/photo 3.svg" alt="">
+              <div class="block1">
+               <div class="grid__text3">Пальто</div>
+              </div>
+           </div>
+            <div><img src="/images/photo 4.svg" alt="">
+              <div class="block1">
+                <div class="grid__text4">Куртки</div>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <footer class="footer">
+       <div class="footer__text">Узнайте первым о новинках</div>
+      <div class="email"><input type="email" size="70px" placeholder="Ваш E-mail"></div>
+      <button class="footer__btn">Подписаться</button>
+      </footer>
+
+
+
     </main>
   </body>
 </html>
