--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
               </div>
            </div>
             <div><img src="/images/photo 4.svg" alt="">
+              <div class="switch__btn"><img src="/images/Vector.svg" alt=""></div>
               <div class="block1">
                 <div class="grid__text4">Куртки</div>
               </div>
@@ -142,8 +143,61 @@
 
       <footer class="footer">
        <div class="footer__text">Узнайте первым о новинках</div>
-      <div class="email"><input type="email" size="70px" placeholder="Ваш E-mail"></div>
-      <button class="footer__btn">Подписаться</button>
+      <div class="email">
+        <div class="email__style">
+          <input name="login" type="email" size="75.5px" placeholder="Ваш E-mail">
+        </div>
+      </div>
+
+      <button class="footer__btn">
+        <p>ПОДПИСАТЬСЯ</p>
+      </button>
+
+      <div class="text__under__btn">Нажимая на кнопку «Подписаться», я соглашаюсь на обработку <br>
+         моих персональных данных и ознакомлен(а) с условиями конфиденциальности. </br>
+      </div>
+
+      <div class="footer__menu">
+
+        <div class="footer__main__text1">КОМПАНИЯ</div>
+
+        <div class="footer__under__main1">
+          <li>О нас</li>
+          <li>Контакты</li>
+        </div>
+
+        <div class="footer__main__text2">ПОЛЕЗНОЕ</div>
+
+        <div class="footer__under__main2">
+          <li>Оплата и доставка</li>
+          <li>Условия возврата</li>
+          <li>Бонусная система</li>
+        </div>
+
+        <div class="footer__main__text3">ПОКУПАТЕЛЮ</div>
+
+        <div class="footer__under__main3">
+          <li>Избранное</li>
+          <li>Публичная оферта</li>
+          <li>Политика конфиденциальности</li>
+        </div>
+
+        <div class="footer__main__text4">КОНТАКТЫ</div>
+
+        <div class="footer__under__main4">
+          <img src="/images/insta.svg" alt="">
+          <div class="footer__tg"><img src="/images/tg.svg" alt=""></div>
+          <li>+38(073) 096 36 44</li>
+          <li>info@yanki.com</li>
+        </div>
+
+      </div>
+
+
+
+
+
+
       </footer>
 
 
